--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*{
+  padding:0;
+  margin:0;
+  box-sizing: border-box;
+}
+
+/* Home page */
 .home-bg{
   background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
   width:100%;
@@ -14,3 +21,47 @@
   color: rgb(216, 31, 68);
   text-shadow: 15px 15px 15px rgb(12, 1, 14);
 }
+
+/* Blog Page */
+.blog-bg{
+  background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
+  width:100%;
+  height:150vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* YourBlog Page */
+.blog-post{
+  /* background-color: rgb(241, 235, 235); */
+  background-color: transparent;
+  padding:20px;
+  width:600px;
+  height: auto;
+  border-radius:20px;
+  box-shadow:15px 15px 20px rgb(170, 169, 169);
+  /* box-shadow:15px 15px 20px rgb(104, 102, 102); */
+}
+
+.yourblog-bg{
+  background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
+  width:100%;
+  height:200vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* ReadBlog Page */
+.img-size{
+  width:100%;
+  height:400px !important;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+
+.side-img{
+  height:400px !important;
+  width:350px;
+}
+
