--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 *{
   padding:0;
   margin:0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Home page */
@@ -26,9 +28,14 @@
 .blog-bg{
   background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
   width:100%;
-  height:150vh;
+  height:auto;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.card-image{
+  height: 200px !important;
+  width:500px;
 }
 
 /* YourBlog Page */
@@ -36,7 +43,7 @@
   /* background-color: rgb(241, 235, 235); */
   background-color: transparent;
   padding:20px;
-  width:600px;
+  width:400px;
   height: auto;
   border-radius:20px;
   box-shadow:15px 15px 20px rgb(170, 169, 169);
@@ -46,7 +53,7 @@
 .yourblog-bg{
   background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
   width:100%;
-  height:200vh;
+  height:auto;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -58,10 +65,28 @@
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
-
-
 .side-img{
   height:400px !important;
   width:350px;
 }
+.side-contents{
+  position: fixed;
+}
 
+
+@media(max-width:576px){
+ .home-content{
+  font-size: 40px;
+  color: rgb(216, 31, 68);
+  text-shadow: 15px 15px 15px rgb(12, 1, 14);
+}
+.side-contents{
+  position: relative;
+}
+}
+
+@media(max-width:768px){
+ .side-contents{
+   position: relative;
+ }
+ }
