--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   /* background-color: rgb(241, 235, 235); */
   background-color: transparent;
   padding:20px;
-  width:400px;
+  width:600px;
   height: auto;
   border-radius:20px;
   box-shadow:15px 15px 20px rgb(170, 169, 169);
@@ -82,6 +82,9 @@
 }
 .side-contents{
   position: relative;
+}
+.blog-post{
+  width:300px;
 }
 }
 
