--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 }
 
 /* Blog Page */
-.blog-bg{
+.blog-bg,.createblog-bg{
   background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
   width:100%;
   height:auto;
@@ -33,33 +33,23 @@
   background-size: cover;
 }
 
-.card-image{
+.blogcard-image{
   height: 200px !important;
   width:500px;
 }
 
-/* YourBlog Page */
-.blog-post{
-  /* background-color: rgb(241, 235, 235); */
+/* CreateBlog Page */
+.createblog-inputbox{
   background-color: transparent;
   padding:20px;
   width:600px;
   height: auto;
   border-radius:20px;
   box-shadow:15px 15px 20px rgb(170, 169, 169);
-  /* box-shadow:15px 15px 20px rgb(104, 102, 102); */
-}
-
-.yourblog-bg{
-  background-image: url("https://www.chiefsalesleader.com/wp-content/uploads/2018/03/Text-Book-Background.png");
-  width:100%;
-  height:auto;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 /* ReadBlog Page */
-.img-size{
+.blogimg-size{
   width:100%;
   height:400px !important;
   border-top-left-radius: 20px;
@@ -83,7 +73,7 @@
 .side-contents{
   position: relative;
 }
-.blog-post{
+.createblog-inputbox{
   width:300px;
 }
 }
